  Python. See the ``_msssql`` examples and reference sections of the
  documentation for more details.

- Compatibility with Azure

  It is now possible to transparently connect to `SQL Server instances`_
  accessible as part of the Azure_ cloud services.

  .. note:: If you need to connect to Azure make sure you use FreeTDS 0.91 or newer.

.. _SQL Server instances: http://www.windowsazure.com/en-us/services/sql-database/
.. _Azure: https://www.windowsazure.com/

Bug fixes
---------

- Handle errors when calling Stored Procedures via the ``.callproc()`` pymssql
  cursor method. Now it will raise a DB-API ``DatabaseException``; previously
  it left a ``_mssql.MSSQLDatabaseException`` exception to surface.

- Fixes in ``tds_version``  ``_mssql`` connections property value

  Made it work with TDS protocol version 7.2.

  The value returned for TDS version 7.1 is still 8.0 for backward
  compatibility (this is because such feature got added in times when
  Microsoft documentation labeled the two protocol versions that followed 7.0
  as 8.0 and 9.0; later it changed them to 7.1 and 7.2 respectively) and will
  be corrected in a future release.

Version 2.1.0 - 2014-02-25 - `Marc Abramowitz <http://marc-abramowitz.com/>`_
=============================================================================

Features
--------

- Sphinx-based documentation (GH-149)

  Read it online at http://pymssql.org/

  Thanks, Ramiro Morales!

	See:
	* https://github.com/pymssql/pymssql/pull/149
	* https://github.com/pymssql/pymssql/pull/162
	* https://github.com/pymssql/pymssql/pull/164
	* https://github.com/pymssql/pymssql/pull/165
	* https://github.com/pymssql/pymssql/pull/166
	* https://github.com/pymssql/pymssql/pull/167
	* https://github.com/pymssql/pymssql/pull/169
	* https://github.com/pymssql/pymssql/pull/174
	* https://github.com/pymssql/pymssql/pull/175

- "Green" support (GH-135)

	Lets you use pymssql with cooperative multi-tasking systems like