@@ -563,7 +563,7 @@ cdef class Cursor:
 
 def connect(server='.', user='', password='', database='', timeout=0,
         login_timeout=60, charset='UTF-8', as_dict=False,
-        host='', appname=None, port='1433'):
+        host='', appname=None, port='1433', conn_properties=None):
     """
     Constructor for creating a connection to the database. Returns a
     Connection object.
@@ -588,6 +588,9 @@ def connect(server='.', user='', password='', database='', timeout=0,
     :type appname: string
     :keyword port: the TCP port to use to connect to the server
     :type port: string
+    :keyword conn_properties: SQL queries to send to the server upon connection
+                              establishment. Can be a string or another kind
+                              of iterable of strings
     """
 
     _mssql.login_timeout = login_timeout
@@ -608,8 +611,10 @@ def connect(server='.', user='', password='', database='', timeout=0,
         server = host
 
     try:
-        conn = _mssql.connect(server, user, password, charset, database,
-            appname, port)
+        conn = _mssql.connect(server=server, user=user, password=password,
+                              charset=charset, database=database,
+                              appname=appname, port=port,
+                              conn_properties=conn_properties)
 
     except _mssql.MSSQLDatabaseException, e:
         raise OperationalError(e.args[0])
